# cpp-spaceship

./: .gitignore  CMakeLists.txt  README.md
src/spaceship/: game-instance.cpp  game-instance.h  inputs.h  main.cpp  player-manager.cpp  player-manager.h
src/spaceship/components/: health-component.cpp  health-component.h  player-hud.cpp  player-hud.h  stylized-model-renderer.cpp  stylized-model-renderer.h
src/spaceship/entities/: ai-spaceship-controller.cpp  ai-spaceship-controller.h  asteroid.cpp  asteroid.h  explosion-effect.cpp  explosion-effect.h  guided-missile.cpp  guided-missile.h  player-spaceship-controller.cpp  player-spaceship-controller.h  projectile.cpp  projectile.h  spaceship-controller.cpp  spaceship-controller.h  spaceship.cpp  spaceship.h
src/spaceship/scenes/: game-scene.cpp  game-scene.h
